<3TbsJegElskerDig!! 🌌🌍 [ Android ] [ day 17 ] [ C++ ] Trying to use Android Studio for ca2 Software Development (using C++) <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi : Thank you!! Keeping things tidy, keeping things clean, keep ca2 build clean, what's that error camilo... !!

Mummi : Thank you!! Release to the client, he is waiting!! Don't make him wait!! Attend well the client like he were a king!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contributio

--- a/write_text_android/CMakeLists.txt
+++ b/write_text_android/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.16)
-project(windowing_android CXX)
+project(write_text_android CXX)
 
 
 list(APPEND library_source
         _.cpp
         _.h
-        _windowing_android.h
+        _write_text_android.h
         _factory.cpp
         #directory_system.cpp
         #directory_system.h
-        buffer.cpp
-        buffer.h
-        display.cpp
-        display.h
+        #buffer.cpp
+        #buffer.h
+        #display.cpp
+        #display.h
         #console.cpp
         #console.h
         #console_ncurses.cpp
@@ -26,23 +26,29 @@ list(APPEND library_source
         #   file_context.h
         #   file_system.cpp
         #   file_system.h
+        font_enumeration.cpp
+        font_enumeration.h
+        fonts.cpp
+        fonts.h
         framework.cpp
         framework.h
         #integration_context.cpp
         #integration_context.h
-        monitor.cpp
-        monitor.h
+        #monitor.cpp
+        #monitor.h
 #        node.cpp
 #        node.h
         #   node_unistd.cpp
         #stdio_file.cpp
         #stdio_file.h
-        text_composition_client.cpp
-        text_composition_client.h
-        window.cpp
-        window.h
-        windowing.cpp
-        windowing.h
+        #text_composition_client.cpp
+        #text_composition_client.h
+        #window.cpp
+        #window.h
+        #windowing.cpp
+        #windowing.h
+        write_text.cpp
+        write_text.h
 )
 
 
