--- a/write_text_android/CMakeLists.txt
+++ b/write_text_android/CMakeLists.txt
@@ -61,7 +61,16 @@ add_library(static_${PROJECT_NAME} STATIC ${library_source})
 
 list(APPEND library_references
         acme
-        acme_posix)
+        acme_posix
+        acme_android
+        apex
+        apex_posix
+        apex_android
+        aqua
+        aura
+        aura_posix
+        aura_android
+)
 
 
 list(APPEND static_library_references ${library_references})
