--- a/windowing_android/CMakeLists.txt
+++ b/windowing_android/CMakeLists.txt
@@ -3,16 +3,8 @@ project(windowing_android CXX)
 
 
 list(APPEND library_source
-        android/bind.cpp
-        android/bind.h
         android/driver.cpp
         android/driver.h
-        android/media_library.cpp
-        android/media_library.h
-        android/message_box.cpp
-        android/message_box.h
-        android/object.cpp
-        android/object.h
         _.cpp
         _.h
         _windowing_android.h
@@ -67,6 +59,7 @@ list(APPEND library_references
         acme
         acme_posix
         acme_android
+        acme_windowing_android
         apex
         apex_posix
         apex_android
@@ -105,7 +98,7 @@ elseif (${ANDROID})
     target_compile_options(static_${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-fpermissive ${EXTRA_CXX_TARGET_COMPILER_OPTIONS}>)
     target_compile_definitions(static_${PROJECT_NAME} PRIVATE CUBE)
 
-    target_link_libraries(${PROJECT_NAME} PRIVATE ${library_references})
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${library_references} log)
     target_link_libraries(static_${PROJECT_NAME} PRIVATE ${static_library_references})
 
     target_link_options(${PROJECT_NAME} PRIVATE -Wl,-z,defs)
