--- a/operating_ambient_android/CMakeLists.txt
+++ b/operating_ambient_android/CMakeLists.txt
@@ -49,6 +49,7 @@ list(APPEND library_references
         acme
         acme_posix
         acme_android
+        acme_windowing_android
         apex
         apex_posix
         apex_android
