<3TbsJegElskerDig!! 🌌🌍 [ Android ] [ day 18 ] [ C++ ] Trying to use Android Studio for ca2 Software Development (using C++) <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi : Thank you!! Keeping things tidy, keeping things clean, keep ca2 build clean, what's that error camilo... !!

Mummi : Thank you!! Release to the client, he is waiting!! Don't make him wait!! Attend well the client like he were a king!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contributio

--- a/acme_windowing_android/CMakeLists.txt
+++ b/acme_windowing_android/CMakeLists.txt
@@ -9,14 +9,14 @@ list(APPEND library_source
         android/android_asset.cpp
         android/android_asset_manager.cpp
         android/android_asset_manager.h
+   android/application_state.cpp
+   android/application_state.h
         android/bind.cpp
         android/bind.h
         #android/com_ace_enumerate.cpp
         #android/com_ace_impact.cpp
         #android/com_ace_InputConnection.cpp
         #android/com_ace_main_activity.cpp
-        android/driver.cpp
-        android/driver.h
         android/jni_environment.cpp
         android/jni_object.cpp
         android/jni_object.h
@@ -24,6 +24,7 @@ list(APPEND library_source
         android/media_library.h
         android/message_box.cpp
         android/message_box.h
+   #android/platform_platform_main_activity.cpp
         _.cpp
         _.h
         _windowing_android.h
