<3TbsJegElskerDig!! 🌌🌍 [ Android ] [ day 22 ] [ ca2 platform ] [ C++ ] Porting ca2 to Android <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi : Thank you!! Keeping things tidy, keeping things clean, keep ca2 build clean, what's that error camilo... !!

Mummi : Thank you!! Release to the client, he is waiting!! Don't make him wait!! Attend well the client like he were a king!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contribution!!

Myrkee (Valheim) streamin

--- a/acme_windowing_android/CMakeLists.txt
+++ b/acme_windowing_android/CMakeLists.txt
@@ -11,13 +11,18 @@ list(APPEND library_source
         android/android_asset_manager.h
    android/application_state.cpp
    android/application_state.h
-        android/bind.cpp
-        android/bind.h
+   android/application_state_jni.cpp
+        android/jni_bind.cpp
+        android/jni_bind.h
+   android/jni_data_block.cpp
+   android/jni_data_block.h
         #android/com_ace_enumerate.cpp
         #android/com_ace_impact.cpp
         #android/com_ace_InputConnection.cpp
         #android/com_ace_main_activity.cpp
-        android/jni_environment.cpp
+        android/jni_context.cpp
+   android/jni_local.cpp
+   android/jni_local.h
    android/jni_object_impl.cpp
    android/jni_object_impl.h
         android/jni_object.cpp
